# meta-facilitator

./: .gitignore  .lintr  DESCRIPTION  LICENSE  README.md  entrypoint.R  main.py  metadata.yaml  params.yaml  pyproject.toml  run.sh
.github/workflows/: lint.yaml  lint.yml
assets/logo/: artma_logo.xcf
config/: demo.yaml
python/: actions.py  cache_keys.py  columns.py  const.py  explore.py  main.py  paths.py
python/analyses/: __init__.py
python/libs/: extensions.py  r.py  time_utils.py  validation.py
python/types/: __init__.py
r/: .lintr  CONST.R  METADATA.R  PATHS.R  README.md  actions.R  config.yaml  custom_linters.R  entrypoint.R  metadata.yaml  run.R  setup_env.R  test.yaml
r/actions/: index.R  utils.R
r/analyses/: chris.R  index.R  utils.R
r/base/: config.R  const.R  metadata.R  options.R  packages.R  paths.R
r/calc/: dof.R  index.R  pcc.R
r/libs/: debug.R  df_utils.R  env.R  file_utils.R  number_utils.R  path_utils.R  string.R  test.R  test_utils.R  utils.R  validation.R
r/scripts/: quit_r.R
r/static/: options.R  options_enum.R
r/stats/: pcc.R
r/testing/: reporters.R  test_const.R  test_fixtures.R  test_utils.R
scripts/: clearCache.sh  common.sh  config.sh  lintAll.sh  mergeAndPush.sh  runR.sh  setup.sh  setupR.sh  shellUtils.sh  test.R  test.sh
scripts/test/: parse.R
src/: actions.py  cache_keys.py  columns.py  const.py  explore.py  paths.py
src/analyses/: __init__.py
src/classes/: __init__.py  analysis.py  clean_df.py  data_pipeline.py
src/libs/: extensions.py  r.py
src/preprocessing/: columns.py  meta.py
src/python/: exploration.py
src/r/: CONST.R  README.md  actions.R  entrypoint.R  process_data.R  setup_env.R
src/types/: results.py  (+3 more)
utils/: README.md
(+74 files in other folders)
