[tool.poetry]
name = "meta-facilitator"
version = "0.1.0"
description = "Streamline data preprocessing for meta-analysis exploration"
authors = ["PetrCala <cala.p@seznam.cz>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
joblib = "^1.3.2"
pandas = "^2.2.1"
pytest = "^8.0.2"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
