[tool.poetry]
name = "meta-facilitator"
version = "0.1.2"
description = "Streamline data preprocessing for meta-analysis exploration"
authors = ["PetrCala <cala.p@seznam.cz>"]
license = "MIT"
readme = "README.md"
package-mode = false
packages = [
    { include = "R", from = "." }
]
repository = "https://github.com/PetrCala/meta-facilitator"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
